# react_flask_tutorial

./: README.md
react-with-flask/: Dockerfile.api  Dockerfile.client  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml
react-with-flask/api/: api.py
react-with-flask/deployment/nginx/: nginx.default.conf
react-with-flask/deployment/uwsgi/: uwsgi.ini
react-with-flask/src/: App.jsx
